@@ -8,30 +8,34 @@ import com.echill.entity.User;
 import com.echill.exception.AppException;
 import com.echill.exception.ErrorEnum;
 import com.echill.exception.TeacherErrorEnum;
+import com.echill.mapper.BlogMapper;
 import com.echill.repository.BlogRepository;
 import com.echill.repository.UserRepository;
+import com.echill.service.persistence.BlogPersistenceService;
+import com.echill.util.SecurityUtils;
+import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-
-import java.io.IOException;
-import java.time.ZoneId;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class BlogService {
 
-    private final BlogRepository blogRepository;
-    private final UserRepository userRepository;
-    private final CloudinaryService cloudinaryService;
+    BlogRepository blogRepository;
+    UserRepository userRepository;
+    CloudinaryService cloudinaryService;
+    BlogPersistenceService blogPersistenceService;
+    BlogMapper blogMapper;
 
     public BlogResponse createBlog(BlogRequest request, MultipartFile file) {
-        User user = userRepository.findById(request.getUserId())
+        User user = userRepository.findById(SecurityUtils.getCurrentUserId())
                 .orElseThrow(() -> new AppException(ErrorEnum.USER_NOTFOUND));
 
         String imageUrl = null;
@@ -39,76 +43,53 @@ public class BlogService {
             imageUrl = cloudinaryService.uploadImage(file, CloudinaryFolder.BLOG_IMAGE);
         }
 
-        Blog blog = Blog.builder()
-                .title(request.getTitle())
-                .content(request.getContent())
-                .imageUrl(imageUrl)
-                .user(user)
-                .build();
-
-        blog = blogRepository.save(blog);
-        return mapToResponse(blog);
+        return blogMapper.toResponse(blogPersistenceService.saveBlog(request, user, imageUrl));
     }
 
     public BlogResponse updateBlog(Long id, BlogRequest request, MultipartFile file) {
-        Blog blog = blogRepository.findById(id)
+        Blog blog = blogRepository.findByIdWithUser(id)
                 .orElseThrow(() -> new AppException(TeacherErrorEnum.BLOG_NOT_FOUND));
 
-        blog.setTitle(request.getTitle());
-        blog.setContent(request.getContent());
+        SecurityUtils.validateOwnership(blog.getUser().getId());
 
-        // Nếu có upload file mới thì cập nhật imageUrl, nếu không thì giữ nguyên
+        String oldImageUrl = blog.getImageUrl();
+        String newImageUrl = null;
+
         if (file != null && !file.isEmpty()) {
-            String imageUrl = cloudinaryService.uploadImage(file, CloudinaryFolder.BLOG_IMAGE);
-            blog.setImageUrl(imageUrl);
+            newImageUrl = cloudinaryService.uploadImage(file, CloudinaryFolder.BLOG_IMAGE);
         }
 
-        blog = blogRepository.save(blog);
-        return mapToResponse(blog);
+        blog = blogPersistenceService.updateBlog(request, blog, newImageUrl);
+
+        if (newImageUrl != null && oldImageUrl != null) {
+            cloudinaryService.deleteImage(oldImageUrl);
+        }
+
+        return blogMapper.toResponse(blog);
     }
 
     public void deleteBlog(Long id) {
-        Blog blog = blogRepository.findById(id)
+        Blog blog = blogRepository.findByIdWithUser(id)
                 .orElseThrow(() -> new AppException(TeacherErrorEnum.BLOG_NOT_FOUND));
-        blogRepository.delete(blog);
+
+        SecurityUtils.validateOwnership(blog.getUser().getId());
+
+        String deleteImageUrl = blog.getImageUrl();
+
+        blogPersistenceService.deleteBlog(blog);
+
+        cloudinaryService.deleteImage(deleteImageUrl);
     }
 
     public BlogResponse getBlogById(Long id) {
-        Blog blog = blogRepository.findById(id)
+        Blog blog = blogRepository.findByIdWithUser(id)
                 .orElseThrow(() -> new AppException(TeacherErrorEnum.BLOG_NOT_FOUND));
-        return mapToResponse(blog);
+        return blogMapper.toResponse(blog);
     }
 
-    public List<BlogResponse> getAllBlogs() {
-        String username = SecurityContextHolder.getContext()
-                .getAuthentication()
-                .getName();
-
-        return blogRepository.findByUsername(username)
-                .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+    public List<BlogResponse> getMyBlogs() {
+        List<Blog> blogs = blogRepository.findAllWithUserByUserId(SecurityUtils.getCurrentUserId());
+        return  blogs.stream().map(blogMapper::toResponse).toList();
     }
 
-    private BlogResponse mapToResponse(Blog blog) {
-        String excerpt = blog.getContent() != null && blog.getContent().length() > 100 
-                ? blog.getContent().substring(0, 100) + "..." 
-                : blog.getContent();
-                
-        return BlogResponse.builder()
-                .id(blog.getId())
-                .title(blog.getTitle())
-                .content(blog.getContent())
-                .imageUrl(blog.getImageUrl())
-                .excerpt(excerpt)
-                .authorName(blog.getUser() != null ? blog.getUser().getFullName() : "Unknown")
-                .createdAt(
-                        blog.getCreatedAt() != null
-                                ? blog.getCreatedAt()
-                                .atZone(ZoneId.systemDefault())
-                                .toLocalDateTime()
-                                : null
-                )
-                .build();
-    }
 }
