@@ -4,80 +4,59 @@ import com.echill.constant.CloudinaryFolder;
 import com.echill.dto.request.CourseRequest;
 import com.echill.dto.response.CourseResponse;
 import com.echill.dto.response.LessonResponse;
-import com.echill.entity.Category;
 import com.echill.entity.Course;
-import com.echill.entity.User;
-import com.echill.entity.enums.Status;
-import com.echill.exception.AppException;
-import com.echill.exception.ErrorEnum;
-import com.echill.exception.TeacherErrorEnum;
-import com.echill.repository.CategoryRepository;
-import com.echill.repository.CourseRepository;
-import com.echill.repository.UserRepository;
+import com.echill.service.persistence.CoursePersistenceService;
+import com.echill.util.SecurityUtils;
+import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.time.ZoneId;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class CourseService {
 
-    private final CourseRepository courseRepository;
-    private final CategoryRepository categoryRepository;
-    private final UserRepository userRepository;
-    private final CloudinaryService cloudinaryService;
+    CloudinaryService cloudinaryService;
+    CoursePersistenceService coursePersistenceService;
 
-    @Transactional
+    // 💥 KHÔNG CÓ @Transactional Ở ĐÂY NỮA
     public CourseResponse createCourse(CourseRequest request, MultipartFile file) {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        User teacher = userRepository.findByUsername(username)
-                .orElseThrow(() -> new AppException(ErrorEnum.USER_NOTFOUND));
+        // 1. Lấy trực tiếp ID từ JWT (Không cần query Username)
+        Long teacherId = SecurityUtils.getCurrentUserId();
 
-        Category category = categoryRepository.findById(request.getCategoryId())
-                .orElseThrow(() -> new AppException(TeacherErrorEnum.CATEGORY_NOT_FOUND));
-
+        // 2. Upload ảnh (Network I/O) - Nếu tốn 3s thì MySQL vẫn rảnh rang
         String imageUrl = null;
         if (file != null && !file.isEmpty()) {
             imageUrl = cloudinaryService.uploadImage(file, CloudinaryFolder.COURSE_IMAGE);
         }
 
-        Course course = Course.builder()
-                .name(request.getName())
-                .description(request.getDescription())
-                .price(request.getPrice())
-                .originalPrice(request.getOriginalPrice())
-                .imageUrl(imageUrl)
-                .level(request.getLevel())
-                .category(category)
-                .teacher(teacher)
-                .status(Status.ACTIVE)
-                .build();
+        // 3. Đẩy xuống Persistence để lưu DB thật nhanh
+        Course course = coursePersistenceService.saveNewCourse(teacherId, request, imageUrl);
 
-        course = courseRepository.save(course);
+        // 4. Map trả về
         return mapToResponse(course);
     }
 
     public List<CourseResponse> getAllCoursesByTeacher() {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        return courseRepository.findByTeacherUsername(username).stream()
+        Long teacherId = SecurityUtils.getCurrentUserId();
+        return coursePersistenceService.getAllCoursesByTeacherId(teacherId).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList(); // Dùng .toList() của Java 16+ cho lẹ, bỏ Collectors.toList() đi
     }
 
     public CourseResponse getCourseById(Long id) {
-        Course course = courseRepository.findById(id)
-                .orElseThrow(() -> new AppException(TeacherErrorEnum.COURSE_NOT_FOUND));
+        Course course = coursePersistenceService.getCourseById(id);
         return mapToResponse(course);
     }
 
+    // Hàm Map giờ đã an toàn tuyệt đối, vì dữ liệu đã được JOIN FETCH kéo lên hết rồi
     private CourseResponse mapToResponse(Course course) {
         return CourseResponse.builder()
                 .id(course.getId().toString())
@@ -90,23 +69,24 @@ public class CourseService {
                 .categoryId(course.getCategory().getId())
                 .categoryName(course.getCategory().getName())
                 .teacherName(course.getTeacher().getFullName())
-                .createdAt(course.getCreatedAt() != null ? 
-                    course.getCreatedAt().atZone(ZoneId.systemDefault()).toLocalDateTime() : null)
-                .lessons(course.getLessons() != null ? 
-                        course.getLessons().stream()
-                                .map(l -> LessonResponse.builder()
-                                        .id(l.getId())
-                                        .title(l.getTitle())
-                                        .content(l.getContent())
-                                        .displayOrder(l.getDisplayOrder())
-                                        .isPreview(l.getIsPreview())
-                                        .publicVideoId(l.getPublicVideoId())
-                                        .rawUrl(l.getRawUrl())
-                                        .hlsUrl(l.getHlsUrl())
-                                        .videoStatus(l.getVideoStatus())
-                                        .durationSeconds(l.getDurationSeconds())
-                                        .build())
-                                .collect(Collectors.toList()) : null)
+                .createdAt(course.getCreatedAt() != null ?
+                        course.getCreatedAt().atZone(ZoneId.systemDefault()).toLocalDateTime() : null)
+                .lessons(course.getLessons() == null || course.getLessons().isEmpty()
+                        ? List.of()
+                        : course.getLessons().stream()
+                        .map(l -> LessonResponse.builder()
+                                .id(l.getId())
+                                .title(l.getTitle())
+                                .content(l.getContent())
+                                .displayOrder(l.getDisplayOrder())
+                                .isPreview(l.getIsPreview())
+                                .publicVideoId(l.getPublicVideoId())
+                                .rawUrl(l.getRawUrl())
+                                .hlsUrl(l.getHlsUrl())
+                                .videoStatus(l.getVideoStatus())
+                                .durationSeconds(l.getDurationSeconds())
+                                .build())
+                        .toList())
                 .build();
     }
 }
