@@ -5,19 +5,13 @@ import com.echill.dto.response.TeacherResponse;
 import com.echill.entity.Certificate;
 import com.echill.entity.TeacherProfile;
 import com.echill.entity.User;
-import com.echill.exception.AppException;
-import com.echill.exception.ErrorEnum;
-import com.echill.repository.CertificateRepository;
-import com.echill.repository.TeacherProfileRepository;
-import com.echill.repository.UserRepository;
+import com.echill.service.persistence.TeacherPersistenceService;
+import com.echill.util.SecurityUtils;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -27,41 +21,31 @@ import java.util.stream.Collectors;
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class TeacherService {
 
-    TeacherProfileRepository teacherProfileRepository;
-    CertificateRepository certificateRepository;
-    UserRepository userRepository;
+    TeacherPersistenceService teacherPersistenceService;
 
-    @Transactional(readOnly = true)
+    // 💥 KHÔNG CẦN @Transactional Ở ĐÂY
     public TeacherResponse getMyProfile() {
-        // 1. Lấy username từ Security Context
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
+        // 1. Lấy thẳng ID từ Security Context (Nhanh, không chạm DB)
+        Long userId = SecurityUtils.getCurrentUserId();
 
-        // 2. Kéo User (kèm role) từ DB
-        User user = userRepository.findByUsernameWithRolesAndPermissions(username)
-                .orElseThrow(() -> new AppException(ErrorEnum.USER_NOTFOUND));
+        // 2. Kéo Data từ Persistence Layer
+        User user = teacherPersistenceService.getUserWithRolesById(userId);
+        TeacherProfile profile = teacherPersistenceService.getProfileByUserId(userId);
 
-        // 3. Kéo TeacherProfile
-        TeacherProfile profile = teacherProfileRepository.findById(user.getId())
-                .orElse(null);
+        // 💥 DỌN DẸP: Không cần check null nữa, cứ thế mà lấy luôn vì profile đã chắc kèo tồn tại!
+        List<Certificate> certificates = teacherPersistenceService.getCertificatesByProfileId(profile.getId());
 
-        // 4. Kéo danh sách Chứng chỉ (Certificates) nếu profile tồn tại
-        List<Certificate> certificates = Collections.emptyList();
-        if (profile != null) {
-            certificates = certificateRepository.findByTeacherProfileId(profile.getId());
-        }
-
-        // 5. Lấy danh sách Roles
+        // 3. Lấy danh sách Roles
         Set<String> roles = user.getUserRoles().stream()
                 .map(userRole -> userRole.getRole().getName())
                 .collect(Collectors.toSet());
 
-        // 6. Map dữ liệu trả về
+        // 4. Map dữ liệu trả về
         return buildTeacherResponse(user, profile, certificates, roles);
     }
 
     private TeacherResponse buildTeacherResponse(User user, TeacherProfile profile, List<Certificate> certificates, Set<String> roles) {
 
-        // Map List<Certificate> sang List<CertificateResponse>
         List<CertificateResponse> certResponses = certificates.stream()
                 .map(cert -> CertificateResponse.builder()
                         .id(cert.getId())
@@ -74,7 +58,7 @@ public class TeacherService {
                         .issuedDate(cert.getIssuedDate())
                         .evidenceUrl(cert.getEvidenceUrl())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return TeacherResponse.builder()
                 .id(user.getId())
@@ -86,10 +70,9 @@ public class TeacherService {
                 .jobTitle(user.getJobTitle())
                 .avatarUrl(user.getAvatarUrl())
                 .currentCoin(user.getCurrentCoin())
-                .bio(profile != null ? profile.getBio() : null)
-                .certificates(certResponses) // Nạp list chứng chỉ vào đây
+                .bio(profile.getBio())
+                .certificates(certResponses)
                 .roles(roles)
                 .build();
     }
-
 }
